--- a/app/views/client_error.erb
+++ b/app/views/client_error.erb
@@ -1,5 +1,4 @@
-  <h1>Error Page</h1>
+<h1>Error!</h1>
 
-<p>
-Client error page: This client does not exist
-</p>
+<h2>Client error page:This client does not exist.</h2>
+<p>Please create an account <a href="#">here</a>.</p>
