--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -43,15 +43,15 @@
           <div class="row">
               <div class="col-lg-12">
                   <div class="intro-message">
-                      <h1>ROBOT WORLD!</h1>
-                      <h3>You Have Entered Robot World, Prepare to Be Robotic!</h3>
+                      <h1>WELCOME TO RUSH HOUR!</h1>
+                      <h3>Statistics for Your Website.</h3>
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
                           <!-- <li>
                               <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                           </li> -->
                           <li>
-                              <a href="https://github.com/notmarkmiranda/robot_world" class="btn btn-default btn-lg"><span class="network-name">Github Repo</span></a>
+                              <a href="https://github.com/drew-t/rush-hour" class="btn btn-default btn-lg"><span class="network-name">Github Repo</span></a>
                           </li>
                           <!-- <li>
                               <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
@@ -66,6 +66,18 @@
 
   </div>
   <!-- /.intro-header -->
-
+	<nav class="navbar navbar-inverse" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#"><span>&copy; </span>2016<span> Squirtle, Bulbasaur &amp; Charmander</span></a>
+			</div>
+		</div><!-- /.container-fluid -->
+	</nav>
 </body>
 </html>
