fixed testing, updated erbs

--- a/app/views/client.erb
+++ b/app/views/client.erb
@@ -72,7 +72,7 @@
             <%= client.payload_requests.list_of_urls_ranked.join(", ") %>
           </div>
 					<div class="text-muted">
-            URLS Ordered By Requests
+            URLs Ordered By Requests
           </div>
 				</div>
 			</div>
