--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -43,7 +43,7 @@
           <div class="row">
               <div class="col-lg-12">
                   <div class="intro-message">
-                      <h1>This is Rush Hour</h1>
+                      <h1>THIS IS RUSH HOUR!</h1>
                       <h3>Payload Statistics for Your Website!</h3>
                       <hr class="intro-divider">
                       <ul class="list-inline intro-social-buttons">
@@ -70,7 +70,7 @@
 	<nav class="navbar navbar-inverse " role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#"><span>&copy; </span>Bulbasaur, Charmander &amp; Squirtle</a>
+				<a class="navbar-brand" href="#"><span>&copy; 2016 </span>Bulbasaur, Charmander &amp; Squirtle</a>
 			</div>
 		</div><!-- /.container-fluid -->
 	</nav>
