javascript chart works now bitches

--- a/app/views/client.erb
+++ b/app/views/client.erb
@@ -161,7 +161,7 @@
 					<svg class="glyph stroked bag"><use xlink:href="#stroked-bag"></use></svg>
 				</div>
 				<div class="col-sm-9 col-lg-7 widget-right">
-					<div class="large">
+					<div class="medium">
             <%= client.request_types.all_http_verbs.join(", ") %>
           </div>
 					<div class="text-muted">
