--- a/app/views/event_error.erb
+++ b/app/views/event_error.erb
@@ -1,10 +1,10 @@
 <h1>Error Page</h1>
 
 <p>
-  Event Error: The given event name <%=event_name%> is not defined.
+  Event Error: The given event name(s) <%=event_name%> is not defined.
 </p>
 
 <p>
   Visit this page for event names that have been defined to date:
 </p>
-<a href="/sources/<%= identifier %>/events">Application Events Index</a>
+<a href="/sources/<%=identifier%>/events">Application Events Index</a>
