--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -37,7 +37,7 @@
 			</div>
 		</form> -->
 		<ul class="nav menu">
-			<li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+			<li class="active"><a href="/sources/<%= identifier %>"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
 
 	</div><!--/.sidebar-->
 
