--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,7 +6,6 @@
 	<title>Rush Hour - Dashboard</title>
 
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/css/datepicker3.css" rel="stylesheet">
 	<link href="/css/styles.css" rel="stylesheet">
 
 	<!--Icons-->
@@ -31,13 +30,9 @@
 	</nav>
 
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
-		<!-- <form role="search">
-			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Search">
-			</div>
-		</form> -->
 		<ul class="nav menu">
 			<li class="active"><a href="/sources/<%= identifier %>"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+			<li><a href="/sources/<%= identifier %>/events"><svg class="glyph stroked star"><use xlink:href="#stroked-star"></use></svg> Events</a></li>
 		</ul>
 	</div><!--/.sidebar-->
 
@@ -51,8 +46,6 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/chart.min.js"></script>
 	<script src="/js/chart-data.js"></script>
-	<script src="/js/easypiechart.js"></script>
-	<script src="/js/easypiechart-data.js"></script>
 
 </body>
 
