--- a/app/views/event.erb
+++ b/app/views/event.erb
@@ -39,7 +39,7 @@
 			<div class="panel-heading">Client Hourly Payload Statistics</div>
 				<div class="canvas-wrapper">
 					<canvas class="main-chart" id="line-chart" height="200" width="600"></canvas>
-        <p>Total number of times event was received: <%= count_for_event %></p>
+        <p class="panel-heading">Total number of times event was received: <%= count_for_event %></p>
 				</div>
 			</div>
 		</div>
